# E-commerce-Backend-with-FastAPI

my_fastapi_project/: pyproject.toml
my_fastapi_project/app/: alembic.ini  crud.py  database.py  main.py  models.py  schemas.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
